Fix sorting validation
